--- a/s2/ex2-w2v-with-neg-sampling-sgd.ipynb
+++ b/s2/ex2-w2v-with-neg-sampling-sgd.ipynb
@@ -55,7 +55,13 @@
     "\n",
     "$$\n",
     "-\\sum_{w\\epsilon Vocab}^{} y_{w} log(\\hat{y_{w}}) = -log(\\hat{y_{neighbor}})\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "“The man who passes the sentence should swing the sword.” – Ned Stark\n",
+    "\n",
+    "Each context-target pair is treated as a new observation in the data. For example, the target word “swing” in the above case produces four training samples: (“swing”, “sentence”), (“swing”, “should”), (“swing”, “the”), and (“swing”, “sword”).\n",
+    "\n",
+    "The model learns to predict **one context word (output)** using **one target word (input)** at a time.\n"
    ]
   },
   {
