--- a/stanford_qa_cnn_archcomparison_qrnn.ipynb
+++ b/stanford_qa_cnn_archcomparison_qrnn.ipynb
@@ -79,7 +79,7 @@
     "    - e.g: for the example above: the country, country of, of my, my birth ...\n",
     "    - Regardless of whether phrase is grammatical\n",
     "    - Exploits local dependencies (short-range)\n",
-    "    - However, long-distance dependencies require many layers (similarly to CNN in computer vision, deeper is better at capture \"big picture\" information)"
+    "    - However, **long-distance dependencies require many layers** (similarly to CNN in computer vision, deeper is better at capture \"big picture\" information)"
    ]
   },
   {
@@ -134,7 +134,7 @@
     "\n",
     "In this sentence, for each phrase, is it in a polite tone and talk about food and blabla\n",
     "\n",
-    "=> In a sense, we can summarize the whole sentence with respect to these features (produced by filters), by doing **max pooling** (to be precise: **global max pooling**)"
+    "=> In a sense, we can **summarize the whole sentence with respect to these features** (produced by filters), by doing **max pooling** (to be precise: **global max pooling**)"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Imporant**: Sometimes **max pooling** is better, because of the nature of natural language:\n",
+    "**Important**: Sometimes **max pooling** is better, because of the nature of natural language:\n",
     "- signals in language are often sparse (you will express politeness in some words, not every word)"
    ]
   },
@@ -181,7 +181,7 @@
    "source": [
     "Or for each column, you can just extract the max k values, in order. \n",
     "\n",
-    "Global max pooling jus just k-max pooling with k = 1"
+    "Global max pooling is just k-max pooling with k = 1"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another type of convolution: dilate convolution\n",
+    "**Another type of convolution: dilate convolution**\n",
     "- add a second cnn layer by using a second cnn filter after previous padding 1 stride 1 kernel size 3 filter\n",
     "- help see a bigger spread of the sentence without having too many parameters"
    ]
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Note: In the paper, the number of each region sizes (2,3,4) is 100 instead of 2\n",
+    "- Note: In the paper, the number of each region sizes filter (2,3,4) is 100 instead of 2\n",
     "- Also he used 'multi channel input' idea of\n",
     "    - Initialize with pre-trained word vectors (word2vec or Glove)\n",
     "    - **Start with two copies**\n",
