--- a/stanford_w2v_formula_and_params.ipynb
+++ b/stanford_w2v_formula_and_params.ipynb
@@ -113,6 +113,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "“The man who passes the sentence should swing the sword.” – Ned Stark\n",
+    "\n",
+    "Each context-target pair is treated as a new observation in the data. For example, the target word “swing” in the above case produces four training samples: (“swing”, “sentence”), (“swing”, “should”), (“swing”, “the”), and (“swing”, “sword”).\n",
+    "\n",
+    "The model learns to predict **one context word (output)** using **one target word (input)** at a time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](images/w2v_prob_formula.png)"
    ]
   },
