diff between CoVe and GloVe, pros and cons

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -35,33 +35,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tag LM (pre ELMO) for Name Entity Recognition (NER)"
+    "# Contextual word embeddings built from natural machine translation (CoVe)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Reminder:\n",
+    "\n",
+    "![](s4/translation_attention_archi.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The limitation of CoVe is obvious: \n",
+    "- (1) **pre-training is bounded by available datasets on the supervised translation task**;\n",
+    "    - Since encoder and decoder are trained end-to-end at the same time, encoder only uses dataset from translation task to update weight embedding (as opposed to be trained separately on bigger dataset such as WikiText - as seen in ULMFIT and advanced tranformer architecture\n",
+    "- (2) the contribution of CoVe to the final performance is constrained by the task-specific model architecture (as each task requires a specific model).\n",
+    "    - **The power of CoVe word embedding is constrained by the limited choices of model architecture and the limited power of task-specific model. At this point we only have LSTM model (with attention perhaps)** with few layer deep, unlike stacking Transformers that we will see soon\n",
+    "        - **We need a model architecture that is good for every task to take away this task-dependency**, similar to a CNN model with replacable head for tasks. This is what BERT or OpenAI-GPT can do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Tag LM (pre ELMO) for Name Entity Recognition (NER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/context_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note that \"word embedding model\" is the word embedding from w2v/glove/fasttext"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/context_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Token embedding is from w2v/glove/fasttext\n",
     "\n",
@@ -72,14 +110,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ELMO"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Peters et al. (2018): ELMo: Embeddings from Language\n",
     "Models\n",
@@ -106,14 +148,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## weighting of layers for different tasks"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The two biLSTM NLM layers have differentiated uses/meanings\n",
     "- Lower layer is better for lower-level syntax, etc.\n",
@@ -124,27 +170,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Transformer"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "http://nlp.seas.harvard.edu/2018/04/03/attention.html"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We want parallelization but RNNs are inherently sequential\n",
     "- Despite GRUs and LSTMs, **RNNs still need attention mechanism to deal with long range dependencies** – path length between states grows with sequence otherwise\n",
@@ -153,9 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/transformer_1.png)"
    ]
@@ -214,8 +252,8 @@
     "Review definition of Attention\n",
     "\n",
     "- On each step of the decoder, use **direct connection to the encoder** to **focus on particular part** of **source sentence**\n",
-    "- More formal: a content-based, memory retrieval mechanism\n",
-    "    - You have a vector in decoder to attend to all this content ( representations/hidden states) from your encoder to decide what information to absorb, based on how similar this content is to every position in the memory "
+    "- More formal: a **content-based, memory retrieval mechanism**\n",
+    "    - You have a vector in decoder to attend to all this content ( representations/hidden states) from your encoder to decide what information to absorb, **based on how similar this content is to every position in the memory**"
    ]
   },
   {
@@ -232,7 +270,7 @@
     "- then multiply this distribution to the value (V) which is just the neighborhood itself and add them, aka produce a weighted combination of your entire neighborhood\n",
     "- then you can add a feed-forward network to compute new features\n",
     "\n",
-    "=> **Definition of Self-attention**: you re-express yourself in terms of a weight combination of your entire neighborhood, based on the similarity b/t you and your neighbors\n",
+    "=> **Definition of Self-attention**: you **re-express yourself based on the similarity b/t you and your neighbors, by doing a weight combination (dot product) of your entire neighborhood**\n",
     "\n",
     "**important note**: attention (and self-attention) in general is **permutation invariant: switching orders of words and the results are still the same after applying attention**\n",
     "\n",
@@ -271,27 +309,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Multihead attention"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/transformer_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**Why?**\n",
     "\n",
@@ -300,27 +332,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "For the e.g below, we have 3 heads, and imagine green arrow captures \"who\" feature, red captures \"did what\" feature and purpil captures \"to whom\". In a sense, **this technique simulate CNN kernel with multiple filters that can filter out different information with each of its filter**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/selfattention_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Note: mapping Q,K,V to multiple **lower dimensional spaces** using **fully-connected linear layer**\n",
     "- for head 1 (i=1), use weight matrix WiQ for Q, W1K for K and W1V for V"
@@ -328,9 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "$$\n",
     "W^Q_i \\in\n",
@@ -346,9 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "$$\n",
     "d_k=d_v=d_{\\text{model}}/h=64\n",
@@ -357,9 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Instead of doing this for the entire columns of Q,K,V\n",
     "$$\n",
@@ -396,7 +416,7 @@
     "hidden": true
    },
    "source": [
-    "Linear tfm used here can be thought as to generate features: you project these vectors into a space using learnable parameters, so that when dot product is applied, IT CAN BE A GOOD PROXY FOR SIMILARITY"
+    "**Linear tfm used here can be thought as to generate features**: you **project these vectors into a space using learnable parameters**, so that when dot product is applied, IT CAN BE A **GOOD PROXY FOR SIMILARITY**"
    ]
   },
   {
@@ -492,14 +512,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Complete transformer block"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_5.png)"
    ]
@@ -507,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class SublayerConnection(nn.Module):\n",
@@ -535,7 +561,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class EncoderLayer(nn.Module):\n",
@@ -561,14 +589,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Fully connected feed-forward network"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Each of the layers in our encoder and decoder contains a fully connected feed-forward network, which is applied to each position separately and identically. This consists of two linear transformations with a ReLU activation in between."
    ]
@@ -576,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class PositionwiseFeedForward(nn.Module):\n",
@@ -593,14 +627,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Layer norm"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Layer norm formula is essentially the same as batchnorm, but\n",
     "- calculated for EACH TRAINING POINT\n",
@@ -611,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class LayerNorm(nn.Module):\n",
@@ -635,7 +675,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Multi-block with multi-head attention vs LSTM/RNN\n",
     "\n",
@@ -651,28 +693,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## The complete encoder"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_6.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Token embeddings and tie-weight (weight sharing)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Similarly to other sequence transduction models, we use learned embeddings to convert the **input tokens** (of encoder) and **output tokens** (of decoder) to **vectors of dimension  d_model**\n",
     "- We also use the usual learned linear transformation and softmax function to convert the decoder output to predicted next-token probabilities. \n",
@@ -682,7 +732,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# see code in Full Model section\n",
@@ -692,14 +744,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Positional encoding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- in order for the model to make use of the order of the sequence, we must inject some information about the relative or absolute position of the tokens in the sequence\n",
     "- The positional encodings have the same dimension d_model as the embeddings, so that the two can be summed\n",
@@ -708,28 +764,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_5.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Create a matrix to show distances between word emb vectors after adding the sinusoid function (for first row aka word #0, color is lighter aka distance is bigger when going right)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_6.png)"
    ]
@@ -737,7 +801,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class PositionalEncoding(nn.Module):\n",
@@ -764,21 +830,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## TODO: visualization in encoder"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Attention visualization in layer 5"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_7.png)"
    ]
