more info on bert and gpt

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -56,6 +56,7 @@
     "    - Since encoder and decoder are trained end-to-end at the same time, encoder only uses dataset from translation task to update weight embedding (as opposed to be trained separately on bigger dataset such as WikiText - as seen in ULMFIT and advanced tranformer architecture\n",
     "- (2) the contribution of CoVe to the final performance is constrained by the task-specific model architecture (as each task requires a specific model).\n",
     "    - **The power of CoVe word embedding is constrained by the limited choices of model architecture and the limited power of task-specific model. At this point we only have LSTM model (with attention perhaps)** with few layer deep, unlike stacking Transformers that we will see soon\n",
+    "        - **We need a model architecture that can train word embedding and that same model can be finetuned on numerous task**\n",
     "        - **We need a model architecture that is good for every task to take away this task-dependency**, similar to a CNN model with replacable head for tasks. This is what BERT or OpenAI-GPT can do"
    ]
   },
@@ -309,21 +310,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Multihead attention"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Why?**\n",
     "\n",
@@ -332,21 +339,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "For the e.g below, we have 3 heads, and imagine green arrow captures \"who\" feature, red captures \"did what\" feature and purpil captures \"to whom\". In a sense, **this technique simulate CNN kernel with multiple filters that can filter out different information with each of its filter**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note: mapping Q,K,V to multiple **lower dimensional spaces** using **fully-connected linear layer**\n",
     "- for head 1 (i=1), use weight matrix WiQ for Q, W1K for K and W1V for V"
@@ -354,7 +367,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "$$\n",
     "W^Q_i \\in\n",
@@ -370,7 +385,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "$$\n",
     "d_k=d_v=d_{\\text{model}}/h=64\n",
@@ -379,7 +396,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Instead of doing this for the entire columns of Q,K,V\n",
     "$$\n",
@@ -777,6 +796,26 @@
     "hidden": true
    },
    "source": [
+    "This mean the first few dimension will oscillate faster than later dimension (as seen below: dimension 6 is wider than 4 (for even dimension using sin) and also wider than 5; dimension 7 is wider than 5 (for odd dimension using cosine) and also wider than 4 and 6\n",
+    "\n",
+    "Think of it like 4 bit binary number \n",
+    "- 0: 0 0 0 0\n",
+    "- 1: 0 0 0 1\n",
+    "- 2: 0 0 1 0\n",
+    "- 3: 0 0 1 1\n",
+    "- 4: 0 1 0 0\n",
+    "- ...\n",
+    "YOu can see the first bit (from right) oscillates faster than 2nd bit, 2nd bit is faster than 3rd bit...\n",
+    "\n",
+    "This will give a sense of order and distance between word vectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "![](images/selfattention_5.png)"
    ]
   },
@@ -857,18 +896,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Transformer's Decoder"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/transformer_11.png)"
    ]
@@ -876,9 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -888,9 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def subsequent_mask(size):\n",
@@ -904,9 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -927,9 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -954,9 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DecoderLayer(nn.Module):\n",
@@ -980,9 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**One problem with using this Decoder for seq2seq task such as neural machine translation** is it will just be similar to LSTM/RNN (autoregressive model as you use observations from previous time steps as input to predict the value at the next time step)"
    ]
@@ -1118,6 +1141,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# OpenAI GPT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://lilianweng.github.io/lil-log/2019/01/31/generalized-language-models.html#openai-gpt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compared to the original transformer architecture, **the transformer decoder model discards the encoder part, so there is only one single input sentence rather than two separate source and target sequences.**\n",
+    "\n",
+    "- Building the language model: This model applies multiple transformer blocks over the embeddings of input sequences. Each block contains a masked multi-headed self-attention layer and a pointwise feed-forward layer. **The final output produces a distribution over target tokens after softmax normalization.**\n",
+    "- Use byte pair encoding\n",
+    "- The most substantial upgrade that OpenAI GPT proposed is to **get rid of the task-specific model and use the pre-trained language model directly!**. With similar designs, no customized model structure is needed for other end tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plugging the classification head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that **only the last layer output (after multiple stacked transformers) of the last token (of a sentence) is used for classification task**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/gpt1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The loss is to minimize the negative log-likelihood for true labels (e.g. classification task). In addition, **adding the LM loss as an auxiliary loss is found to be beneficial**, because:\n",
+    "    - (1) it helps accelerate convergence during training and\n",
+    "    - (2) it is expected to improve the generalization of the supervised model.\n",
+    "    \n",
+    "$$\n",
+    "% <![CDATA[\n",
+    "\\begin{aligned}\n",
+    "\\mathcal{L}_\\text{cls} &= \\sum_{(\\mathbf{x}, y) \\in \\mathcal{D}} \\log P(y\\mid x_1, \\dots, x_n) = \\sum_{(\\mathbf{x}, y) \\in \\mathcal{D}} \\log \\text{softmax}(\\mathbf{h}_L^{(n)}(\\mathbf{x})\\mathbf{W}_y) \\\\\n",
+    "\\mathcal{L}_\\text{LM} &= -\\sum_{i} \\log p(x_i\\mid x_{i-k}, \\dots, x_{i-1}) \\\\\n",
+    "\\mathcal{L} &= \\mathcal{L}_\\text{cls} + \\lambda \\mathcal{L}_\\text{LM}\n",
+    "\\end{aligned} %]]>\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In summary:\n",
+    "\n",
+    "At the first stage, generative pre-training of a language model can absorb as much free text as possible. Then at the second stage, the model is fine-tuned on specific tasks with a small labeled dataset and a minimal set of new parameters to learn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# BERT"
    ]
   },
@@ -1143,8 +1239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution: Mask out k% of the input words, and then predict the\n",
-    "masked words\n",
+    "Solution: Mask out k% of the input words using a special place holder ``[MASK]``, and then predict the masked words\n",
     "- They always use k = 15%\n",
     "                  store          gallon\n",
     "                    ↑              ↑ \n",
@@ -1215,7 +1310,30 @@
    "source": [
     "## losses\n",
     "\n",
-    "You will have 2 losses: one from predict the [MASK] words and one binary prediction's loss from predict whether correct next sentence or not"
+    "You will have 2 losses: one from predict the [MASK] LM likelihood loss and next sentence prediction loss\n",
+    "\n",
+    "**The training loss is the sum of the mean masked LM likelihood and mean next sentence prediction likelihood.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plugging the classification head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the first token of an input sentence is always forced to be [CLS] — a placeholder that will be used later for prediction in downstream tasks.\n",
+    "\n",
+    "For classification tasks, we get the prediction by **taking the final hidden state of the special first token** [CLS], $\\mathbf{h}^\\text{[CLS]}_L$, **and multiplying it with a small weight matrix**, $\\text{softmax}(\\mathbf{h}^\\text{[CLS]}_L \\mathbf{W}_\\text{cls})$\n",
+    "\n",
+    "\n",
+    "Bonus for question-answering task:\n",
+    "\n",
+    "For QA tasks like SQuAD, we need to predict the text span in the given paragraph for an given question. BERT **predicts two probability distributions of every token**, being the start and the end of the text span. Only two new small matrices, Ws and We, are newly learned during fine-tuning and softmax(h(i)LWs) and softmax(h(i)LWe) define two probability distributions."
    ]
   },
   {
@@ -1260,7 +1378,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Look at b) for single sentence classification task and c) for QA task (as seen in 'Plugging the classification head' tag above)\n",
+    "\n",
+    "![](images/bert1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](images/transformer_10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AlBERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://lilianweng.github.io/lil-log/2019/01/31/generalized-language-models.html#albert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a light-weighted version of BERT model. An ALBERT model can be trained 1.7x faster with 18x fewer parameters, compared to a BERT model of similar configuration. ALBERT incorporates three changes as follows: the first two help reduce parameters and memory consumption and hence speed up the training speed, while the third one proposes a more chanllenging training task to replace the next sentence prediction (NSP) objective.\n",
+    "\n",
+    "1. **Important**: In BERT, the **WordPiece tokenization embedding size E is configured to be the same as the hidden state size H** (TODO: is it in model using Transformer in general too?). That is saying, if we want to increase the model size (larger H), we need to learn a larger tokenization embedding too, which is expensive because it depends on the vocabulary size (V).\n",
+    "==> **tokenization embedding is expected to learn context-independent representation** and the **hidden states are context-dependent**, it makes sense to **separate the size of the hidden layers from the size of vocabulary embedding.** using factorized embedding parameterization (embedding matrix of size V×H is decomposed into two small matrices of size V×E and E×H ???)\n",
+    "\n",
+    "2. Cross parameter sharing\n",
+    "3. Sentence order prediction: e.g. Positive sample: two consecutive segments **from the same document**. Negative sample: same as above, but the segment order is switched."
    ]
   }
  ],
