--- a/fastai2_nlp/fastai_vnmese_getdata.ipynb
+++ b/fastai2_nlp/fastai_vnmese_getdata.ipynb
@@ -20,39 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# from fastai2.text.all import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bs=128\n",
-    "data_path = Config.data_path()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Path('/home/quantran/.fastai/data')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# data_path = Path('/home/quantran/.fastai/data')\n",
-    "# data_path"
+    "from pathlib import Path"
    ]
   },
   {
@@ -61,12 +29,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lang = 'vi'"
+    "\n",
+    "# from fastai2.text.all import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bs=128\n",
+    "# data_path = Config.data_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/quan/.fastai/data')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_path = Path('/home/quan/.fastai/data')\n",
+    "data_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lang = 'vi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,18 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "('viwiki',\n",
-       " PosixPath('/home/quantran/.fastai/data/viwiki'),\n",
+       " PosixPath('/home/quan/.fastai/data/viwiki'),\n",
        " ['vi_wt', 'vi_wt_vocab'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +147,13 @@
     "        bunzip(path/zip_fn)\n",
     "\n",
     "    with working_directory(path):\n",
-    "        if not (path/'wikiextractor').exists(): os.system('git clone https://github.com/attardi/wikiextractor.git')\n",
+    "        if not (path/'wikiextractor').exists():\n",
+    "            print('Do these steps below and come back!')\n",
+    "            return\n",
+    "#             os.system('git clone -n https://github.com/attardi/wikiextractor.git')\n",
+    "#             os.system('cd wikiextractor')\n",
+    "#             os.system('git checkout -b working_branch e4abb4cbd0')\n",
+    "#             os.system('cd ..')\n",
     "        print(\"extracting...\")\n",
     "        os.system(\"python wikiextractor/WikiExtractor.py --processes 4 --no_templates \" +\n",
     "            f\"--min_text_length 1800 --filter_disambig_pages --log_file log -b 100G -q {xml_fn}\")\n",
@@ -180,42 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "downloading...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "unzipping...\n",
       "extracting...\n"
      ]
     }
    ],
    "source": [
-    "# get_wiki(path,lang)"
+    "get_wiki(path,lang)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +222,7 @@
       "<doc id=\"13\" url=\"https://vi.wikipedia.org/wiki?curid=13\" title=\"Tiếng Việt\">\r\n",
       "Tiếng Việt\r\n",
       "\r\n",
-      "Tiếng Việt, còn gọi tiếng Việt Nam, tiếng Kinh hay Việt ngữ, là ngôn ngữ của người Việt (dân tộc Kinh) và là ngôn ngữ chính thức tại Việt Nam. Đây là tiếng mẹ đẻ của khoảng 85% dân cư Việt Nam, cùng với hơn 4 triệu Việt kiều. Tiếng Việt còn là ngôn ngữ thứ hai của các dân tộc thiểu số tại Việt Nam. Mặc dù tiếng Việt có một số từ vựng vay mượn từ tiếng Hán và trước đây dùng chữ Nôm – một hệ chữ viết dựa trên chữ Hán – để viết nhưng tiếng Việt được coi là một trong số các ngôn ngữ thuộc ngữ hệ Nam Á có số người nói nhiều nhất (nhiều hơn một số lần so với các ngôn ngữ khác cùng hệ cộng lại). Ngày nay, tiếng Việt dùng bảng chữ cái Latinh, gọi là chữ Quốc ngữ, cùng các dấu thanh để viết.\r\n"
+      "Tiếng Việt (chữ Nôm: ), cũng được gọi là tiếng Việt Nam (chữ Nôm: 㗂越南), tiếng Kinh (chữ Nôm: 㗂京) hay Việt ngữ (chữ Nôm: 越語) là ngôn ngữ của người Việt và là ngôn ngữ chính thức tại Việt Nam. Đây là tiếng mẹ đẻ của khoảng 85% dân cư Việt Nam, cùng với hơn 4 triệu Việt kiều. Tiếng Việt còn là ngôn ngữ thứ hai của các dân tộc thiểu số tại Việt Nam, và được công nhận là một ngôn ngữ dân tộc thiểu số tại Cộng hòa Séc.\r\n"
      ]
     }
    ],
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -272,7 +269,9 @@
       "2500000\n",
       "2600000\n",
       "2700000\n",
-      "2800000\n"
+      "2800000\n",
+      "2900000\n",
+      "3000000\n"
      ]
     }
    ],
@@ -282,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/quantran/.fastai/data/viwiki/docs')"
+       "Path('/home/quan/.fastai/data/viwiki/docs')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,20 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/home/quantran/.fastai/data/viwiki/docs/Hội chứng Alice ở xứ sở thần tiên.txt'),\n",
-       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/Nicolas Sarkozy.txt'),\n",
-       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/Công nghệ pháp lý.txt'),\n",
-       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/TT (bài hát).txt'),\n",
-       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/Adolf von Glümer.txt')]"
+       "(#5) [Path('/home/quan/.fastai/data/viwiki/docs/Doug Emhoff.txt'),Path('/home/quan/.fastai/data/viwiki/docs/HMS Myngs (R06).txt'),Path('/home/quan/.fastai/data/viwiki/docs/Xuân La (phường).txt'),Path('/home/quan/.fastai/data/viwiki/docs/Cung điện Goldstein.txt'),Path('/home/quan/.fastai/data/viwiki/docs/Tứ khố toàn thư.txt')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
