--- a/fastai2_nlp/hugging-face-preprocessing.ipynb
+++ b/fastai2_nlp/hugging-face-preprocessing.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "In Transformers v4.0.0, the default path to cache downloaded models changed from '~/.cache/torch/transformers' to '~/.cache/huggingface/transformers'. Since you don't seem to have overridden and '~/.cache/torch/transformers' is a directory that exists, we're moving it to '~/.cache/huggingface/transformers' to avoid redownloading models you have already in the cache. You should only see this message once.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import GPT2LMHeadModel, GPT2TokenizerFast"
    ]
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +40,7 @@
        "transformers.models.gpt2.tokenization_gpt2_fast.GPT2TokenizerFast"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +78,7 @@
        "'This is an example of text, this is another example of text. :), :/'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,23 +109,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# HuggingFace preprocessing (tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://huggingface.co/transformers/preprocessing.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "text = [\"Hello I'm a single sentence\",\n",
-    "                    \"And another sentence\",\n",
+    "                    \"And anot`her sentence\",\n",
     "                    \"And the very very last one\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -236,12 +235,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a pair of sentences (useful for BERT, but we will play around with truncation and max_length here"
+    "With a pair of sentences (useful for BERT), but we will play around with truncation and max_length here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +288,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 16])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch['input_ids'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +326,8 @@
       "torch.Size([3, 12])\n",
       "Hello II'm a sentence that goes with the first sentence\n",
       "And another sentenceAnd I should be encoded with the second sentence\n",
-      "And the very veryAnd I go with the very last one\n"
+      "And the very veryAnd I go with the very last one\n",
+      "torch.Size([3, 12])\n"
      ]
     }
    ],
@@ -319,7 +339,9 @@
     "print(batch['input_ids'].shape)\n",
     "# truncate only the first sentence. Still truncate from the right\n",
     "for i in batch['input_ids']:\n",
-    "    print(tmp_token.decode(i))"
+    "    print(tmp_token.decode(i))\n",
+    "\n",
+    "print(batch['input_ids'].shape)"
    ]
   },
   {
@@ -403,23 +425,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': [[18435, 314, 1101, 257, 2060, 6827, 314, 1101, 257, 6827, 326, 2925, 351, 262, 717, 6827], [843, 1194, 6827, 843, 314, 815, 307, 30240, 351, 262, 1218, 6827], [843, 262, 845, 845, 938, 530, 843, 314, 467, 351, 262, 845, 938, 530]], 'attention_mask': [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]}\n",
+      " Hello I'm a single sentence I'm a sentence that goes with the first sentence\n",
+      " And another sentence And I should be encoded with the second sentence\n",
+      " And the very very last one And I go with the very last one\n"
+     ]
+    }
+   ],
    "source": [
-    "# batch_sentences = [[\"Hello\", \"I'm\", \"a\", \"single\", \"sentence\"],\n",
-    "#                    [\"And\", \"another\", \"sentence\"],\n",
-    "#                    [\"And\", \"the\", \"very\", \"very\", \"last\", \"one\"]]\n",
-    "# batch_of_second_sentences = [[\"I'm\", \"a\", \"sentence\", \"that\", \"goes\", \"with\", \"the\", \"first\", \"sentence\"],\n",
-    "#                              [\"And\", \"I\", \"should\", \"be\", \"encoded\", \"with\", \"the\", \"second\", \"sentence\"],\n",
-    "#                              [\"And\", \"I\", \"go\", \"with\", \"the\", \"very\", \"last\", \"one\"]]\n",
-    "# batch = tmp_token(batch_sentences, batch_of_second_sentences, is_split_into_words=True)\n",
-    "# print(batch)\n",
+    "tmp_token = GPT2TokenizerFast.from_pretrained(pretrained_weights,add_prefix_space=True)\n",
+    "\n",
+    "batch_sentences = [[\"Hello\", \"I'm\", \"a\", \"single\", \"sentence\"],\n",
+    "                   [\"And\", \"another\", \"sentence\"],\n",
+    "                   [\"And\", \"the\", \"very\", \"very\", \"last\", \"one\"]]\n",
+    "batch_of_second_sentences = [[\"I'm\", \"a\", \"sentence\", \"that\", \"goes\", \"with\", \"the\", \"first\", \"sentence\"],\n",
+    "                             [\"And\", \"I\", \"should\", \"be\", \"encoded\", \"with\", \"the\", \"second\", \"sentence\"],\n",
+    "                             [\"And\", \"I\", \"go\", \"with\", \"the\", \"very\", \"last\", \"one\"]]\n",
+    "batch = tmp_token(batch_sentences, batch_of_second_sentences, is_split_into_words=True)\n",
+    "print(batch)\n",
     "# print(batch['input_ids'].shape)\n",
     "\n",
-    "# for i in batch['input_ids']:\n",
-    "#     print(tmp_token.decode(i))"
+    "for i in batch['input_ids']:\n",
+    "    print(tmp_token.decode(i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
